@@ -17,7 +17,9 @@ if [ -f "$SCRIPT_DIR/.env" ]; then
 fi
 
 # Define the path to the shaded JAR
-JAR_PATH="$SCRIPT_DIR/target/mkpro-2.0.jar"
+
+export JDK_JAVA_OPTIONS="--add-modules jdk.incubator.vector --enable-preview"
+JAR_PATH="$SCRIPT_DIR/target/mkpro-4.5.0.jar"
 
 # Check if the JAR exists
 if [ ! -f "$JAR_PATH" ]; then
@@ -27,4 +29,4 @@ if [ ! -f "$JAR_PATH" ]; then
 fi
 
 # Run the application
-java -jar "$JAR_PATH" "$@"
+java -Dmkpro.db.name=$(basename "$0" .sh) -jar "$JAR_PATH" "$@"
